more benchmark cases + linux stuff
added benchmark test cases for using stdin/stdout directly through printf/scanf.
this is done by reopening stdin/stdout - so all benchmark results are now sent through stderr.

added makefile for linux systems.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# custom stuff
+*.dat
 
 # Created by https://www.gitignore.io/api/c,c++,linux,windows,notepadpp,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=c,c++,linux,windows,notepadpp,visualstudio,visualstudiocode
